--- a/test/fixtures/pets.yml
+++ b/test/fixtures/pets.yml
@@ -1,9 +1,11 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  name: MyString
+  id: 1
+  name: name-1
   age: 1
 
 two:
-  name: MyString
+  id: 2
+  name: name-2
   age: 1
