--- a/test/fixtures/posts.yml
+++ b/test/fixtures/posts.yml
@@ -1,9 +1,11 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  text: MyString
+  id: 1
+  text: one-text
   user_id: 1
 
 two:
-  text: MyString
+  id: 2
+  text: two-text
   user_id: 1
