Enable recommended rspec options

--- a/.gitignore
+++ b/.gitignore
@@ -30,5 +30,8 @@
 # Ignore master key for decrypting credentials and more.
 /config/master.key
 
+# rails-rspec
+spec/examples.txt
+
 # Additional
 .env
